--- a/client/src/scss/components/index.scss
+++ b/client/src/scss/components/index.scss
@@ -1,7 +1,12 @@
 @import './common.scss';
 @import './nav.scss';
-@import './tabsAuth.scss';
+@import './hero.scss';
+
 @import './formAuth.scss';
 @import './switch.scss';
 @import './modal.scss';
-@import './hero.scss';
+
+@import './searching.scss';
+@import './search-form.scss';
+@import './categories.scss';
+@import './mentors.scss';
