add selecting from First Page

--- a/client/src/scss/components/common.scss
+++ b/client/src/scss/components/common.scss
@@ -46,3 +46,10 @@ body.light {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.wrapper-bg-search {
+    background: linear-gradient(174deg, 
+    var(--bg-color-darker-opaque) -3.73%, 
+    var(--bg-color-lighter-opaque) 102.38%);
+    height: 100vh;
+}
