--- a/client/src/scss/helpers/variables.scss
+++ b/client/src/scss/helpers/variables.scss
@@ -5,6 +5,9 @@ $blue: rgb(73, 45, 216);
 $dark-blue: rgb(58, 37, 109);
 $dark-grey: rgb(189, 200, 212);
 
+$light-grey-switch: rgb(126, 126, 126);
+$dark-grey-switch: rgb(56, 56, 56);
+
 // $dark-blue-light: rgba(58, 37, 109, 0.5);
 // $blue-light: rgba(73, 45, 216, 0.5);
 // $dark-grey-light: rgba(189, 200, 212, 0.5);
