--- a/client/src/scss/helpers/mixins.scss
+++ b/client/src/scss/helpers/mixins.scss
@@ -1,3 +1,9 @@
+@mixin mqDecrease ($w) {
+    @media screen and (max-width: $w) {
+       @content; 
+    }  
+}
+
 @mixin flex ($align, $justify) {
     display: flex;
     align-items: $align;
