--- a/client/prod/style/main.css
+++ b/client/prod/style/main.css
@@ -175,6 +175,11 @@ body.light {
   height: 100vh;
 }
 
+@media screen and (max-width: 476px) {
+  .container {
+    max-width: 354px;
+  }
+}
 .nav {
   padding-top: 87px;
   display: flex;
@@ -220,6 +225,32 @@ body.light {
   pointer-events: none;
 }
 
+@media screen and (max-width: 476px) {
+  .nav {
+    padding-top: 57px;
+    padding-left: 10px;
+    padding-right: 5px;
+  }
+  .nav__logo-link {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: normal;
+  }
+  .nav__menu {
+    gap: 15px;
+  }
+  .nav__link {
+    display: none;
+  }
+  .nav__title-auth {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: normal;
+  }
+  .nav__title-auth > span {
+    color: rgb(251, 129, 34);
+  }
+}
 .hero {
   margin-top: 92px;
 }
@@ -305,6 +336,70 @@ body.light {
   color: var(--text-color);
 }
 
+@media screen and (max-width: 476px) {
+  .hero {
+    margin-top: 71px;
+  }
+  .hero__title {
+    width: 309px;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 85px;
+    letter-spacing: 0px;
+  }
+  .hero__buttons {
+    display: inline-block;
+    margin-top: 55px;
+  }
+  .hero__find {
+    padding: 11px 25px;
+    border-radius: 14px;
+  }
+  .hero__find-link {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: normal;
+  }
+  .hero__video-start {
+    position: absolute;
+    right: 60px;
+    bottom: 163px;
+    width: 68px;
+    height: 48px;
+    border-radius: 16px;
+  }
+  .hero__footer {
+    margin-top: 55px;
+    margin-bottom: 61px;
+  }
+  .hero__footer-select {
+    display: inline-block;
+  }
+  .hero .select-item {
+    position: relative;
+    margin-bottom: 20px;
+  }
+  .hero .select-link {
+    font-weight: 700;
+    font-size: 19px;
+    line-height: normal;
+  }
+  .hero .select-link::before {
+    top: 30px;
+    width: 32px;
+    border-bottom: 4px solid rgb(251, 129, 34);
+  }
+  .hero .mentor-registration {
+    position: absolute;
+    bottom: 61px;
+    right: 110px;
+  }
+  .hero .mentor-registration-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: normal;
+  }
+}
 .form-signin, .form-signup {
   display: none;
 }
@@ -528,8 +623,15 @@ input:checked + .slider:after {
 
 .form-searching {
   display: grid;
-  grid-template-columns: 8fr 3fr 1fr;
+  grid-template-columns: 8fr 5fr;
   align-items: center;
+  column-gap: 25px;
+}
+
+.fieelds-categ-go {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
   column-gap: 25px;
 }
 
@@ -552,11 +654,6 @@ input:checked + .slider:after {
   padding-right: unset;
 }
 
-.form-searching .field-searching:nth-child(2) {
-  padding-right: 25px;
-  padding-left: 35px;
-}
-
 .field-searching:focus {
   outline: 2px solid rgb(225, 226, 226);
 }
@@ -569,6 +666,38 @@ input:checked + .slider:after {
   background-color: var(--bg-color-darker);
 }
 
+@media screen and (max-width: 476px) {
+  .search {
+    margin-top: 30px;
+  }
+  .form-searching {
+    display: block;
+    width: 90%;
+  }
+  .field-searching {
+    font-weight: 700;
+    font-size: 11px;
+    line-height: normal;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-right: 55px;
+    padding-left: 18px;
+    border-radius: 10px;
+  }
+  .form-searching .field-searching:first-child {
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .fieelds-categ-go {
+    width: 100%;
+  }
+  .field-searching option {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: normal;
+  }
+}
 .categories {
   margin-top: 33px;
   display: flex;
@@ -588,6 +717,20 @@ input:checked + .slider:after {
   color: rgb(251, 129, 34);
 }
 
+@media screen and (max-width: 476px) {
+  .categories {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+  }
+  .categories-item {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: normal;
+  }
+}
 .mentors {
   margin-top: 33px;
 }
@@ -744,4 +887,120 @@ input:checked + .slider:after {
   font-size: 24px;
   line-height: normal;
   color: var(--text-color-pg2);
+}
+
+/********************** M O B I L E *********************/
+@media screen and (max-width: 476px) {
+  .mentors {
+    margin-top: 24px;
+  }
+  .wrapper-cards {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    column-gap: 17px;
+    row-gap: 16px;
+  }
+  .item {
+    border-radius: 19px;
+  }
+  .item-pic {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 19px;
+    width: 167px;
+    height: 117px;
+    margin-bottom: 9px;
+  }
+  .item-pic::after {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: "3 Slots";
+    font-weight: 700;
+    font-size: 7px;
+    line-height: normal;
+    right: 11px;
+    bottom: -15px;
+    width: 31px;
+    height: 30px;
+    border-radius: 17px;
+  }
+  .item-pic-photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 19px;
+  }
+  .item-mentor-name {
+    padding-left: 12px;
+    padding-right: 0px;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: normal;
+  }
+  .item-rating-count {
+    padding-left: 11px;
+    padding-right: 0px;
+    font-weight: 700;
+    font-size: 7px;
+    line-height: normal;
+  }
+  .item-stack {
+    padding-left: 12px;
+    width: 132px;
+    height: 22px;
+    font-weight: 400;
+    font-size: 7px;
+    line-height: normal;
+  }
+  .item-language-country {
+    padding-left: 22px;
+    padding-right: 0px;
+    position: relative;
+    font-weight: 400;
+    font-size: 5px;
+    line-height: normal;
+    margin-bottom: 6px;
+  }
+  .item-language-country::before {
+    left: 12px;
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+  }
+  .item-booking {
+    margin-left: 9px;
+    margin-bottom: 6px;
+    padding: 7px 14px;
+    border-radius: 19px;
+  }
+  .item-booking-link, .item-booking-cost {
+    font-weight: 700;
+    font-size: 10px;
+    line-height: normal;
+  }
+  .item-booking-cost {
+    padding-left: 14px;
+  }
+  .choice-cards {
+    margin: 43px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .arrow-left, .arrow-right {
+    border-radius: 53px;
+  }
+  .arrow-left, .arrow-right svg {
+    width: 53px;
+    height: 50px;
+  }
+  .qty-mentors {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: normal;
+  }
 }
