--- a/client/src/scss/components/mentors.scss
+++ b/client/src/scss/components/mentors.scss
@@ -127,3 +127,101 @@
     @include textSize(400, 24px, normal);
     color: var(--text-color-pg2)
 }
+
+/********************** M O B I L E *********************/
+@include mqDecrease (476px) {
+    .mentors {
+        margin-top: 24px;
+    }
+    .wrapper-cards {
+        @include flex(center, flex-start);
+        flex-wrap: wrap;
+        column-gap: 17px;
+        row-gap: 16px;
+    }
+    
+    .item {
+        border-radius: 19px;
+        
+        &-pic {
+            @include flex(center, center);
+            border-radius: 19px;
+            width: 167px;
+            height: 117px;
+            margin-bottom: 9px;
+            &::after {
+                @include flex(center, center);
+                content: '3 Slots';
+                @include textSize(700, 7px, normal);
+                right: 11px;
+                bottom: -15px;
+                width: 31px;
+                height: 30px;
+                border-radius: 17px;
+            }
+            &-photo {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 19px;
+            }
+        }
+        &-mentor-name {
+            padding-left: 12px;
+            padding-right: 0px;
+            @include textSize(700, 15px, normal);
+        }
+        &-rating-count {
+            padding-left: 11px;
+            padding-right: 0px;
+            @include textSize(700, 7px, normal);
+        }
+        &-stack {
+            padding-left: 12px;
+            width: 132px;
+            height: 22px;
+            @include textSize(400, 7px, normal);
+        }
+        &-language-country {
+            padding-left: 22px;
+            padding-right: 0px;
+            position: relative;
+            @include textSize(400, 5px, normal);
+            margin-bottom: 6px;
+            &::before {
+                left: 12px;
+                width: 6px;
+                height: 6px;
+                border-radius: 3px;
+            }
+        }
+        &-booking {
+            margin-left: 9px;
+            margin-bottom: 6px;
+            padding: 7px 14px;
+            border-radius: 19px;
+            &-link, &-cost {
+                @include textSize(700, 10px, normal);
+            }
+            &-cost {
+                padding-left: 14px;
+            }
+        }
+    }
+    
+    .choice-cards {
+        margin: 43px 10px;
+        @include flex(center, space-between);
+    }
+    .arrow-left, .arrow-right {
+        border-radius: 53px;
+    }
+    .arrow-left, .arrow-right svg{
+        width: 53px;
+        height: 50px;
+    }
+    .qty-mentors {
+        @include textSize(400, 15px, normal);
+        
+    }
+}
