--- a/client/src/scss/components/index.scss
+++ b/client/src/scss/components/index.scss
@@ -7,5 +7,8 @@
 @import './modal.scss';
 
 @import './search-form.scss';
+
 @import './categories.scss';
+
 @import './mentors.scss';
+@import './rating.scss';
